--- a/asteroid.html
+++ b/asteroid.html
@@ -1,49 +1,62 @@
 <html>
 
 <head>
-    <title>WEBGL</title>
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+<title>WEBGL</title>
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
-    <script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
-    <script type="text/javascript" src="js/webgl-utils.js"></script>
-    <script type="text/javascript" src="js/webgl-debug.js"></script>
-    <script type="text/javascript">
-
-
-        var gl;
-        var shaderProgram;
-        var mvMatrix = mat4.create();
-        //var mvMatrixStack = [];
-        var pMatrix = mat4.create();
-        var textures = [];
-
-        var game;
+<script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
+<script type="text/javascript" src="js/webgl-utils.js"></script>
+<script type="text/javascript" src="js/webgl-debug.js"></script>
+<script type="text/javascript">
 
 
-    </script>
-    <script type="text/javascript" src="js/Model.js"></script>
-    <script type="text/javascript" src="js/Game.js"></script>
+    var gl;
+    var shaderProgram;
+    var mvMatrix = mat4.create();
+    //var mvMatrixStack = [];
+    var pMatrix = mat4.create();
+    var textures = [];
+
+    var game;
 
 
-    <script id="shader-fs" type="x-shader/x-fragment">
+</script>
+<script type="text/javascript" src="js/Model.js"></script>
+<script type="text/javascript" src="js/Game.js"></script>
+
+
+<script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
 
     varying vec2 vTextureCoord;
+    varying vec3 vLightWeighting;
 
     uniform sampler2D uSampler;
+    uniform float uAlpha;
 
     void main(void) {
-        gl_FragColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
+        vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
+        gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a * uAlpha);
     }
 
-    </script>
 
-    <script id="shader-vs" type="x-shader/x-vertex">
+
+</script>
+
+<script id="shader-vs" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
+    attribute vec3 aVertexNormal;
     attribute vec2 aTextureCoord;
 
     uniform mat4 uMVMatrix;
     uniform mat4 uPMatrix;
+    uniform mat3 uNMatrix;
+
+    uniform vec3 uAmbientColor;
+
+    uniform vec3 uLightingDirection;
+    uniform vec3 uDirectionalColor;
+    varying vec3 vLightWeighting;
 
     varying vec2 vTextureCoord;
 
@@ -51,124 +64,142 @@
     void main(void) {
         gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
         vTextureCoord = aTextureCoord;
+
+        vec3 transformedNormal = uNMatrix * aVertexNormal;
+        float directionalLightWeighting = max(dot(transformedNormal, uLightingDirection), 0.0);
+        vLightWeighting = uAmbientColor + uDirectionalColor * directionalLightWeighting;
+
     }
 
-    </script>
-
-    <script type="text/javascript">
 
 
-        function handleLoadedTexture(texture) {
-            gl.bindTexture(gl.TEXTURE_2D, texture);
-            gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-            gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
-            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.NEAREST);
-            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.NEAREST);
-            gl.bindTexture(gl.TEXTURE_2D, null);
+</script>
+
+<script type="text/javascript">
+
+
+    function handleLoadedTexture(texture) {
+
+        gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
+        gl.bindTexture(gl.TEXTURE_2D, texture);
+        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
+        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+        gl.bindTexture(gl.TEXTURE_2D, null);
+    }
+
+
+    function initTexture(name) {
+        var texture = gl.createTexture();
+        texture.image = new Image();
+        texture.image.onload = function () {
+            handleLoadedTexture(texture)
         }
 
+        texture.image.src = name + '.png';
+        textures.push(texture);
+    }
 
-        function initTexture(name) {
-            var texture = gl.createTexture();
-            texture.image = new Image();
-            texture.image.onload = function () {
-                handleLoadedTexture(texture)
+
+    function initShaders() {
+
+        var fragmentShader = getShader(gl, "shader-fs");
+        var vertexShader = getShader(gl, "shader-vs");
+
+        shaderProgram = gl.createProgram();
+        gl.attachShader(shaderProgram, vertexShader);
+        gl.attachShader(shaderProgram, fragmentShader);
+        gl.linkProgram(shaderProgram);
+
+        if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+            alert("Could not initialise shaders");
+        }
+
+        gl.useProgram(shaderProgram);
+
+        shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
+        gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
+
+        shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
+        gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
+
+        shaderProgram.vertexNormalAttribute = gl.getAttribLocation(shaderProgram, "aVertexNormal");
+        gl.enableVertexAttribArray(shaderProgram.vertexNormalAttribute);
+
+
+        shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
+        shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
+        shaderProgram.nMatrixUniform = gl.getUniformLocation(shaderProgram, "uNMatrix");
+        shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
+        shaderProgram.useLightingUniform = gl.getUniformLocation(shaderProgram, "uUseLighting");
+        shaderProgram.ambientColorUniform = gl.getUniformLocation(shaderProgram, "uAmbientColor");
+        shaderProgram.alphaUniform = gl.getUniformLocation(shaderProgram, "uAlpha");
+
+
+    }
+
+    function getShader(gl, id) {
+
+        var shaderScript = document.getElementById(id);
+        if (!shaderScript) {
+            return null;
+        }
+
+        var str = "";
+        var k = shaderScript.firstChild;
+        while (k) {
+            if (k.nodeType == 3) {
+                str += k.textContent;
             }
-
-            texture.image.src = name + '.png';
-            textures.push(texture);
+            k = k.nextSibling;
         }
 
-
-        function initShaders() {
-
-            var fragmentShader = getShader(gl, "shader-fs");
-            var vertexShader = getShader(gl, "shader-vs");
-
-            shaderProgram = gl.createProgram();
-            gl.attachShader(shaderProgram, vertexShader);
-            gl.attachShader(shaderProgram, fragmentShader);
-            gl.linkProgram(shaderProgram);
-
-            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-                alert("Could not initialise shaders");
-            }
-
-            gl.useProgram(shaderProgram);
-
-            shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
-            gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
-
-            shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
-            gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
-
-            shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
-            shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
-            shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
+        var shader;
+        if (shaderScript.type == "x-shader/x-fragment") {
+            shader = gl.createShader(gl.FRAGMENT_SHADER);
+        } else if (shaderScript.type == "x-shader/x-vertex") {
+            shader = gl.createShader(gl.VERTEX_SHADER);
+        } else {
+            return null;
         }
 
-        function getShader(gl, id) {
+        gl.shaderSource(shader, str);
+        gl.compileShader(shader);
 
-            var shaderScript = document.getElementById(id);
-            if (!shaderScript) {
-                return null;
-            }
-
-            var str = "";
-            var k = shaderScript.firstChild;
-            while (k) {
-                if (k.nodeType == 3) {
-                    str += k.textContent;
-                }
-                k = k.nextSibling;
-            }
-
-            var shader;
-            if (shaderScript.type == "x-shader/x-fragment") {
-                shader = gl.createShader(gl.FRAGMENT_SHADER);
-            } else if (shaderScript.type == "x-shader/x-vertex") {
-                shader = gl.createShader(gl.VERTEX_SHADER);
-            } else {
-                return null;
-            }
-
-            gl.shaderSource(shader, str);
-            gl.compileShader(shader);
-
-            if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-                alert(gl.getShaderInfoLog(shader));
-                return null;
-            }
-
-            return shader;
+        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+            alert(gl.getShaderInfoLog(shader));
+            return null;
         }
 
-
-        function logGLCall(functionName, args) {
-            console.log("gl." + functionName + "(" +
-                    WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
-        }
+        return shader;
+    }
 
 
-        function webGLStart() {
-            var canvas = document.getElementById("canvas");
+    function logGLCall(functionName, args) {
+        console.log("gl." + functionName + "(" +
+                WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
+    }
 
-            game = new Game('asteroid');
-            game.init(canvas);
 
-        }
+    function webGLStart() {
+        var canvas = document.getElementById("canvas");
 
-    </script>
+        game = new Game('asteroid');
+        game.init(canvas);
 
-    <style type="text/css">
-        #loadingtext {
-            position: absolute;
-            top: 250px;
-            left: 150px;
-            font-size: 2em;
-            color: white;
-        }
-    </style>
+    }
+
+</script>
+
+<style type="text/css">
+    #loadingtext {
+        position: absolute;
+        top: 250px;
+        left: 150px;
+        font-size: 2em;
+        color: white;
+    }
+</style>
 
 
 </head>
