--- a/asteroid.html
+++ b/asteroid.html
@@ -1,31 +1,27 @@
 <html>
 
 <head>
-<title>WEBGL</title>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+    <title>WEBGL</title>
+    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
-<script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
-<script type="text/javascript" src="js/webgl-utils.js"></script>
-<script type="text/javascript" src="js/webgl-debug.js"></script>
-<script type="text/javascript">
-
-
-    var gl;
-    var shaderProgram;
-    var mvMatrix = mat4.create();
-    //var mvMatrixStack = [];
-    var pMatrix = mat4.create();
-    var textures = [];
-
-    var game;
+    <script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
+    <script type="text/javascript" src="js/webgl-utils.js"></script>
+    <script type="text/javascript" src="js/webgl-debug.js"></script>
+    <script type="text/javascript">
 
 
-</script>
-<script type="text/javascript" src="js/Model.js"></script>
-<script type="text/javascript" src="js/Game.js"></script>
+        var gl;
+        var shaderProgram;
 
 
-<script id="shader-fs" type="x-shader/x-fragment">
+
+    </script>
+    <script type="text/javascript" src="js/Texture.js"></script>
+    <script type="text/javascript" src="js/Model.js"></script>
+    <script type="text/javascript" src="js/Game.js"></script>
+
+
+    <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
 
     varying vec2 vTextureCoord;
@@ -39,11 +35,9 @@
         gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a * uAlpha);
     }
 
+    </script>
 
-
-</script>
-
-<script id="shader-vs" type="x-shader/x-vertex">
+    <script id="shader-vs" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
     attribute vec3 aVertexNormal;
     attribute vec2 aTextureCoord;
@@ -71,146 +65,115 @@
 
     }
 
+    </script>
+
+    <script type="text/javascript">
 
 
-</script>
-
-<script type="text/javascript">
 
 
-    function handleLoadedTexture(texture) {
+        function initShaders() {
 
-        gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-        gl.bindTexture(gl.TEXTURE_2D, texture);
-        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-        gl.bindTexture(gl.TEXTURE_2D, null);
-    }
+            var fragmentShader = getShader(gl, "shader-fs");
+            var vertexShader = getShader(gl, "shader-vs");
 
+            shaderProgram = gl.createProgram();
+            gl.attachShader(shaderProgram, vertexShader);
+            gl.attachShader(shaderProgram, fragmentShader);
+            gl.linkProgram(shaderProgram);
 
-    function initTexture(name) {
-        var texture = gl.createTexture();
-        texture.image = new Image();
-        texture.image.onload = function () {
-            handleLoadedTexture(texture)
-        }
-
-        texture.image.src = name + '.png';
-        textures.push(texture);
-    }
-
-
-    function initShaders() {
-
-        var fragmentShader = getShader(gl, "shader-fs");
-        var vertexShader = getShader(gl, "shader-vs");
-
-        shaderProgram = gl.createProgram();
-        gl.attachShader(shaderProgram, vertexShader);
-        gl.attachShader(shaderProgram, fragmentShader);
-        gl.linkProgram(shaderProgram);
-
-        if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-            alert("Could not initialise shaders");
-        }
-
-        gl.useProgram(shaderProgram);
-
-        shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
-        gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
-
-        shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
-        gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
-
-        shaderProgram.vertexNormalAttribute = gl.getAttribLocation(shaderProgram, "aVertexNormal");
-        gl.enableVertexAttribArray(shaderProgram.vertexNormalAttribute);
-
-
-        shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
-        shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
-        shaderProgram.nMatrixUniform = gl.getUniformLocation(shaderProgram, "uNMatrix");
-        shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
-        shaderProgram.useLightingUniform = gl.getUniformLocation(shaderProgram, "uUseLighting");
-        shaderProgram.ambientColorUniform = gl.getUniformLocation(shaderProgram, "uAmbientColor");
-        shaderProgram.alphaUniform = gl.getUniformLocation(shaderProgram, "uAlpha");
-
-
-    }
-
-    function getShader(gl, id) {
-
-        var shaderScript = document.getElementById(id);
-        if (!shaderScript) {
-            return null;
-        }
-
-        var str = "";
-        var k = shaderScript.firstChild;
-        while (k) {
-            if (k.nodeType == 3) {
-                str += k.textContent;
+            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+                alert("Could not initialise shaders");
             }
-            k = k.nextSibling;
+
+            gl.useProgram(shaderProgram);
+
+            shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
+            gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
+
+            shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
+            gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
+
+            shaderProgram.vertexNormalAttribute = gl.getAttribLocation(shaderProgram, "aVertexNormal");
+            gl.enableVertexAttribArray(shaderProgram.vertexNormalAttribute);
+
+
+            shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
+            shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
+            shaderProgram.nMatrixUniform = gl.getUniformLocation(shaderProgram, "uNMatrix");
+            shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
+            shaderProgram.useLightingUniform = gl.getUniformLocation(shaderProgram, "uUseLighting");
+            shaderProgram.ambientColorUniform = gl.getUniformLocation(shaderProgram, "uAmbientColor");
+            shaderProgram.alphaUniform = gl.getUniformLocation(shaderProgram, "uAlpha");
+
+
         }
 
-        var shader;
-        if (shaderScript.type == "x-shader/x-fragment") {
-            shader = gl.createShader(gl.FRAGMENT_SHADER);
-        } else if (shaderScript.type == "x-shader/x-vertex") {
-            shader = gl.createShader(gl.VERTEX_SHADER);
-        } else {
-            return null;
+        function getShader(gl, id) {
+
+            var shaderScript = document.getElementById(id);
+            if (!shaderScript) {
+                return null;
+            }
+
+            var str = "";
+            var k = shaderScript.firstChild;
+            while (k) {
+                if (k.nodeType == 3) {
+                    str += k.textContent;
+                }
+                k = k.nextSibling;
+            }
+
+            var shader;
+            if (shaderScript.type == "x-shader/x-fragment") {
+                shader = gl.createShader(gl.FRAGMENT_SHADER);
+            } else if (shaderScript.type == "x-shader/x-vertex") {
+                shader = gl.createShader(gl.VERTEX_SHADER);
+            } else {
+                return null;
+            }
+
+            gl.shaderSource(shader, str);
+            gl.compileShader(shader);
+
+            if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+                alert(gl.getShaderInfoLog(shader));
+                return null;
+            }
+            return shader;
         }
 
-        gl.shaderSource(shader, str);
-        gl.compileShader(shader);
 
-        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-            alert(gl.getShaderInfoLog(shader));
-            return null;
+        function logGLCall(functionName, args) {
+            console.log("gl." + functionName + "(" +
+                    WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
         }
 
-        return shader;
-    }
 
+        function webGLStart() {
+            var canvas = document.getElementById("canvas");
+            var game;
+            game = new Game(gl,'asteroid');
+            game.init(canvas);
 
-    function logGLCall(functionName, args) {
-        console.log("gl." + functionName + "(" +
-                WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
-    }
+        }
 
+    </script>
 
-    function webGLStart() {
-        var canvas = document.getElementById("canvas");
-
-        game = new Game('asteroid');
-        game.init(canvas);
-
-    }
-
-</script>
-
-<style type="text/css">
-    #loadingtext {
-        position: absolute;
-        top: 250px;
-        left: 150px;
-        font-size: 2em;
-        color: white;
-    }
-</style>
-
-
+    <style type="text/css">
+        #loadingtext {
+            position: absolute;
+            top: 250px;
+            left: 150px;
+            font-size: 2em;
+            color: white;
+        }
+    </style>
 </head>
-
-
 <body onload="webGLStart();">
-
 <canvas style="float:left;" id="canvas" style="border: none;" width="800" height="600"></canvas>
 <div style="float:left;font-size:50px;">FPS: <span id="fps">Loading...</span></span></div>
 <br/>
-
 </body>
-
 </html>
