Reorganized data folders
Reorganized data folders

--- a/asteroid.html
+++ b/asteroid.html
@@ -4,9 +4,9 @@
     <title>WEBGL</title>
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
-    <script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
-    <script type="text/javascript" src="js/webgl-utils.js"></script>
-    <script type="text/javascript" src="js/webgl-debug.js"></script>
+    <script type="text/javascript" src="js/gl/glMatrix-0.9.5.min.js"></script>
+    <script type="text/javascript" src="js/gl/webgl-utils.js"></script>
+    <script type="text/javascript" src="js/gl/webgl-debug.js"></script>
     <script type="text/javascript">
 
 
