Renamed the entry point

--- a/index.html
+++ b/index.html
@@ -172,16 +172,17 @@
     </style>
 </head>
 <body onload="webGLStart();">
-<div style="float:left;padding:20px;">
+<div style="float:left;padding:20px;width:45%;">
 <h1>Creating new crappy code 2014-03-04</h1>
-    <p>Went and reorganized the texture loading to get rid of few global variables. This also allows me not to pay attention about index order of textures when drawing. Much pride. Huge succss</p>
+    <p>Went and reorganized the texture loading to get rid of few global variables. This also allows me not to pay attention about index order of textures when drawing. Much pride. Huge success.</p>
     <p>Next step would be to create different shaders to different types of meshes so I can fix the opasity problems introduced with ammunition</p>
     <p>When left idle the asteroids will hide in the shadows and attack in unison. No clue why. Pause is needed I guess.</p>
 <h1>Doing something with my free time 2014-02-00</h1>
-    <p>Hi. These are just my random toughts about webgl and trying something new.</p>
+    <p>Hi. These are just my random thoughts about webgl and trying something new.</p>
 </div>
-<canvas style="float:right;padding:20px;" id="canvas" style="border: none;" width="800" height="600"></canvas>
-<div style="clear:both;float:right;font-size:50px;padding:20px;">FPS: <span id="fps">Loading...</span></span></div>
-<br/>
+<div style="float:right;font-size:50px;padding:20px;width:45%;"></span>
+<canvas  id="canvas" style="border: none;" width="800" height="600"></canvas>
+<div>FPS: <span id="fps">Loading...</span></div>
+</div>
 </body>
 </html>
