Typos and cosmetic changes

--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
 <h1>Doing something with my free time 2014-02-00</h1>
     <p>Hi. These are just my random thoughts about webgl and trying something new.</p>
 </div>
-<div style="float:right;font-size:50px;padding:20px;width:45%;"></span>
+<div style="float:right;padding:20px;width:45%;"></span>
 <canvas  id="canvas" style="border: none;" width="800" height="600"></canvas>
-<div>FPS: <span id="fps">Loading...</span></div>
+<div style="font-size:50px;">FPS: <span id="fps">Loading...</span></div>
+<div>GitHub <a href="https://github.com/VeikkoSe/ship">https://github.com/VeikkoSe/ship</a></div>
 </div>
 </body>
 </html>
