Added classes for ship and bullet
Code is still in development. Still need work with structure and
implementation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
 
     </script>
+    <script type="text/javascript" src="js/ActionMapper.js"></script>
     <script type="text/javascript" src="js/Texture.js"></script>
     <script type="text/javascript" src="js/Model.js"></script>
+    <script type="text/javascript" src="js/Bullet.js"></script>
+    <script type="text/javascript" src="js/Ship.js"></script>
     <script type="text/javascript" src="js/Game.js"></script>
 
 
