--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <html>
 
 <head>
-    <title>WEBGL</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf8">
-    <link href="css/smoothness/jquery-ui-1.8.13.custom.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript" src="js/gl/glMatrix-0.9.5.min.js"></script>
-    <script type="text/javascript" src="js/gl/webgl-utils.js"></script>
-    <script type="text/javascript" src="js/gl/webgl-debug.js"></script>
-    <script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
-    <script type="text/javascript">
+<title>WEBGL</title>
+<meta http-equiv="content-type" content="text/html; charset=utf8">
+<link href="css/smoothness/jquery-ui-1.8.13.custom.css" type="text/css" rel="stylesheet"/>
+<script type="text/javascript" src="js/gl/glMatrix-0.9.5.min.js"></script>
+<script type="text/javascript" src="js/gl/webgl-utils.js"></script>
+<script type="text/javascript" src="js/gl/webgl-debug.js"></script>
+<script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
+<script type="text/javascript">
 
 
-        var gl;
-        var shaderProgram;
+    var gl;
+    var shaderProgram;
+    var currentlyPressedKeys = {};
+    var game;
 
 
-    </script>
-    <script type="text/javascript" src="js/ActionMapper.js"></script>
-    <script type="text/javascript" src="js/Texture.js"></script>
-    <script type="text/javascript" src="js/Model.js"></script>
-    <script type="text/javascript" src="js/Bullet.js"></script>
-    <script type="text/javascript" src="js/Ship.js"></script>
-    <script type="text/javascript" src="js/Game.js"></script>
+</script>
 
+<script type="text/javascript" src="js/Texture.js"></script>
+<script type="text/javascript" src="js/Model.js"></script>
+<script type="text/javascript" src="js/Bullet.js"></script>
+<script type="text/javascript" src="js/Gun.js"></script>
+<script type="text/javascript" src="js/Ship.js"></script>
+<script type="text/javascript" src="js/Game.js"></script>
+<script type="text/javascript" src="js/ActionMapper.js"></script>
 
-    <script id="per-fragment-lighting-fs" type="x-shader/x-fragment">
+<script id="per-fragment-lighting-fs" type="x-shader/x-fragment">
     precision mediump float;
 
     varying vec3 vTransformedNormal;
@@ -71,9 +74,10 @@
         gl_FragColor = vec4(fragmentColor.rgb * lightWeighting, fragmentColor.a * uAlpha);
     }
 
-    </script>
 
-    <script id="per-fragment-lighting-vs" type="x-shader/x-vertex">
+</script>
+
+<script id="per-fragment-lighting-vs" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
     attribute vec3 aVertexNormal;
     attribute vec2 aTextureCoord;
@@ -86,7 +90,6 @@
     varying vec4 vPosition;
     varying vec2 vTextureCoord;
 
-
     void main(void) {
 
 
@@ -97,120 +100,125 @@
         vTransformedNormal = uNMatrix * aVertexNormal;
     }
 
-    </script>
 
-    <script type="text/javascript">
+</script>
 
-
-        function initShaders() {
-            var fragmentShader = getShader(gl, "per-fragment-lighting-fs");
-            var vertexShader = getShader(gl, "per-fragment-lighting-vs");
-
-            shaderProgram = gl.createProgram();
-            gl.attachShader(shaderProgram, vertexShader);
-            gl.attachShader(shaderProgram, fragmentShader);
-            gl.linkProgram(shaderProgram);
-
-            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-                alert("Could not initialise shaders");
-            }
-
-            gl.useProgram(shaderProgram);
-
-            shaderProgram.aVertexPosition = gl.getAttribLocation(shaderProgram, "aVertexPosition");
-            gl.enableVertexAttribArray(shaderProgram.aVertexPosition);
-
-            shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
-            gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
-
-            shaderProgram.aVertexNormal = gl.getAttribLocation(shaderProgram, "aVertexNormal");
-            gl.enableVertexAttribArray(shaderProgram.aVertexNormal);
+<script type="text/javascript">
 
 
-            shaderProgram.uPMatrix = gl.getUniformLocation(shaderProgram, "uPMatrix");
-            shaderProgram.uMVMatrix = gl.getUniformLocation(shaderProgram, "uMVMatrix");
-            shaderProgram.uNMatrix = gl.getUniformLocation(shaderProgram, "uNMatrix");
-            shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
+    function initShaders() {
+        var fragmentShader = getShader(gl, "per-fragment-lighting-fs");
+        var vertexShader = getShader(gl, "per-fragment-lighting-vs");
 
-            shaderProgram.uMaterialShininess = gl.getUniformLocation(shaderProgram, "uMaterialShininess");
-            shaderProgram.uAmbient = gl.getUniformLocation(shaderProgram, "uAmbient");
-            //shaderProgram.uMaterialDiffuse = gl.getUniformLocation(shaderProgram, "uMaterialDiffuse");
-            //shaderProgram.uMaterialSpecular = gl.getUniformLocation(shaderProgram, "uMaterialSpecular");
+        shaderProgram = gl.createProgram();
+        gl.attachShader(shaderProgram, vertexShader);
+        gl.attachShader(shaderProgram, fragmentShader);
+        gl.linkProgram(shaderProgram);
 
-
-            shaderProgram.uLightPosition = gl.getUniformLocation(shaderProgram, "uLightPosition");
-            shaderProgram.uLightAmbient = gl.getUniformLocation(shaderProgram, "uLightAmbient");
-            shaderProgram.uLightDiffuse = gl.getUniformLocation(shaderProgram, "uLightDiffuse");
-            shaderProgram.uLightSpecular = gl.getUniformLocation(shaderProgram, "uLightSpecular");
-
-
-            shaderProgram.alphaUniform = gl.getUniformLocation(shaderProgram, "uAlpha");
-            shaderProgram.useLightingUniform = gl.getUniformLocation(shaderProgram, "uUseLighting");
-
-
+        if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+            alert("Could not initialise shaders");
         }
 
-        function getShader(gl, id) {
+        gl.useProgram(shaderProgram);
 
-            var shaderScript = document.getElementById(id);
-            if (!shaderScript) {
-                return null;
-            }
+        shaderProgram.aVertexPosition = gl.getAttribLocation(shaderProgram, "aVertexPosition");
+        gl.enableVertexAttribArray(shaderProgram.aVertexPosition);
 
-            var str = "";
-            var k = shaderScript.firstChild;
-            while (k) {
-                if (k.nodeType == 3) {
-                    str += k.textContent;
-                }
-                k = k.nextSibling;
-            }
+        shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
+        gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
 
-            var shader;
-            if (shaderScript.type == "x-shader/x-fragment") {
-                shader = gl.createShader(gl.FRAGMENT_SHADER);
-            } else if (shaderScript.type == "x-shader/x-vertex") {
-                shader = gl.createShader(gl.VERTEX_SHADER);
-            } else {
-                return null;
-            }
+        shaderProgram.aVertexNormal = gl.getAttribLocation(shaderProgram, "aVertexNormal");
+        gl.enableVertexAttribArray(shaderProgram.aVertexNormal);
 
-            gl.shaderSource(shader, str);
-            gl.compileShader(shader);
 
-            if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-                alert(gl.getShaderInfoLog(shader));
-                return null;
-            }
-            return shader;
+        shaderProgram.uPMatrix = gl.getUniformLocation(shaderProgram, "uPMatrix");
+        shaderProgram.uMVMatrix = gl.getUniformLocation(shaderProgram, "uMVMatrix");
+        shaderProgram.uNMatrix = gl.getUniformLocation(shaderProgram, "uNMatrix");
+        shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
+
+        shaderProgram.uMaterialShininess = gl.getUniformLocation(shaderProgram, "uMaterialShininess");
+        shaderProgram.uAmbient = gl.getUniformLocation(shaderProgram, "uAmbient");
+        //shaderProgram.uMaterialDiffuse = gl.getUniformLocation(shaderProgram, "uMaterialDiffuse");
+        //shaderProgram.uMaterialSpecular = gl.getUniformLocation(shaderProgram, "uMaterialSpecular");
+
+
+        shaderProgram.uLightPosition = gl.getUniformLocation(shaderProgram, "uLightPosition");
+        shaderProgram.uLightAmbient = gl.getUniformLocation(shaderProgram, "uLightAmbient");
+        shaderProgram.uLightDiffuse = gl.getUniformLocation(shaderProgram, "uLightDiffuse");
+        shaderProgram.uLightSpecular = gl.getUniformLocation(shaderProgram, "uLightSpecular");
+
+
+        shaderProgram.alphaUniform = gl.getUniformLocation(shaderProgram, "uAlpha");
+        shaderProgram.useLightingUniform = gl.getUniformLocation(shaderProgram, "uUseLighting");
+
+
+    }
+
+    function getShader(gl, id) {
+
+        var shaderScript = document.getElementById(id);
+        if (!shaderScript) {
+            return null;
         }
 
-
-        function logGLCall(functionName, args) {
-            console.log("gl." + functionName + "(" +
-                    WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
+        var str = "";
+        var k = shaderScript.firstChild;
+        while (k) {
+            if (k.nodeType == 3) {
+                str += k.textContent;
+            }
+            k = k.nextSibling;
         }
 
-
-        function webGLStart() {
-            var canvas = document.getElementById("canvas");
-            var game;
-            game = new Game(gl, 'asteroid');
-            game.init(canvas);
-
+        var shader;
+        if (shaderScript.type == "x-shader/x-fragment") {
+            shader = gl.createShader(gl.FRAGMENT_SHADER);
+        } else if (shaderScript.type == "x-shader/x-vertex") {
+            shader = gl.createShader(gl.VERTEX_SHADER);
+        } else {
+            return null;
         }
 
-    </script>
+        gl.shaderSource(shader, str);
+        gl.compileShader(shader);
 
-    <style type="text/css">
-        #loadingtext {
-            position: absolute;
-            top: 250px;
-            left: 150px;
-            font-size: 2em;
-            color: white;
+        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+            alert(gl.getShaderInfoLog(shader));
+            return null;
         }
-    </style>
+        return shader;
+    }
+
+
+    function logGLCall(functionName, args) {
+        console.log("gl." + functionName + "(" +
+                WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
+    }
+
+
+    function webGLStart() {
+        var canvas = document.getElementById("canvas");
+        //
+
+        game = new Game(gl, 'asteroid');
+        game.init(canvas);
+        document.onkeydown = game.actionMapper.handleKeyDown;
+        document.onkeyup = game.actionMapper.handleKeyUp;
+
+    }
+
+
+</script>
+
+<style type="text/css">
+    #loadingtext {
+        position: absolute;
+        top: 250px;
+        left: 150px;
+        font-size: 2em;
+        color: white;
+    }
+</style>
 </head>
 <body onload="webGLStart();">
 
@@ -244,6 +252,7 @@
     </table>
 
 </div>
+<div id="debugarea"></div>
 <script>
 
     $('#slider-x').slider({value: 54.0, min: -100, max: 100, step: 0.1, slide: updateLightPosition, change: updateLightPosition});
