--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>WEBGL</title>
+    <title>Asteroids</title>
     <meta http-equiv="content-type" content="text/html; charset=utf8">
     <link href="css/smoothness/jquery-ui-1.8.13.custom.css" type="text/css" rel="stylesheet"/>
 
@@ -11,20 +11,22 @@
     <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
     <script type="text/javascript" src="js/gl/webgl-utils.js"></script>
     <script type="text/javascript" src="js/gl/webgl-debug.js"></script>
+    <script type="text/javascript" src="bower_components/traceur-runtime/traceur-runtime.js"></script>
+    <script type="text/javascript" src="out/src/Particle.js"></script>
+    <script type="text/javascript" src="out/src/Particles.js"></script>
+    <script type="text/javascript" src="out/src/Texture.js"></script>
+    <script type="text/javascript" src="out/src/Model.js"></script>
+    <script type="text/javascript" src="out/src/Asteroids.js"></script>
+    <script type="text/javascript" src="out/src/Asteroid.js"></script>
+    <script type="text/javascript" src="out/src/Bullet.js"></script>
+    <script type="text/javascript" src="out/src/Gun.js"></script>
+    <script type="text/javascript" src="out/src/Ship.js"></script>
+    <script type="text/javascript" src="out/src/Game.js"></script>
+    <script type="text/javascript" src="out/src/ActionMapper.js"></script>
 
-    <script type="text/javascript" src="js/Particle.js"></script>
-    <script type="text/javascript" src="js/Particles.js"></script>
-    <script type="text/javascript" src="js/Texture.js"></script>
-    <script type="text/javascript" src="js/Model.js"></script>
-    <script type="text/javascript" src="js/Asteroids.js"></script>
-    <script type="text/javascript" src="js/Asteroid.js"></script>
-    <script type="text/javascript" src="js/Bullet.js"></script>
-    <script type="text/javascript" src="js/Gun.js"></script>
-    <script type="text/javascript" src="js/Ship.js"></script>
-    <script type="text/javascript" src="js/Game.js"></script>
-    <script type="text/javascript" src="js/ActionMapper.js"></script>
 
-    <script type="text/javascript">
+
+    <script>
 
         var gl;
         var shaderProgram;
@@ -33,6 +35,8 @@
         var game;
         var screenWidth = 110; //worldcoordinates
         var screenHeight = 65; //worldcoordinates
+
+
 
         function printDebug(msg) {
             $('#debugarea').html(msg);
@@ -178,22 +182,13 @@
         }
 
 
+
+
     </script>
 
 
-
-    <style type="text/css">
-        #loadingtext {
-            position: absolute;
-            top: 250px;
-            left: 150px;
-            font-size: 2em;
-            color: white;
-        }
-    </style>
 </head>
-<body onload="webGLStart();">
-
+<body onload="webGLStart()">
 <canvas id="canvas" style="border: none;" width="1280" height="720"></canvas>
 
 <div id="bottom">
@@ -241,7 +236,6 @@
 
 
 </script>
-
 
 </body>
 </html>
